--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -4,25 +4,31 @@
   <% end %>
 
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Expenses</h1>
+    <h1 class="font-bold text-4xl">Expenses (<%= @expenses.map(&:amount).sum %> PLN)</h1>
     <%= link_to "New expense", new_expense_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
   <div id="expenses" class="min-w-full mt-4">
-    <table class="min-w-full table-fixed border-collapse border border-slate-200">
-      <thead class="bg-blue-600 text-white rounded-md text-left">
-        <tr class="rounded-md">
-          <th class="min-w[150-px] p-3 font-medium">Name</th>
-          <th class="min-w[150-px] p-3 font-medium">Date</th>
-          <th class="min-w[150-px] p-3 font-medium">Amount</th>
-          <th class="min-w[150-px] p-3 font-medium">Description</th>
-          <th class="min-w[150-px] p-3 font-medium">Edit</th>
-          <th class="min-w[150-px] p-3 font-medium">Delete</th>
-        </tr>
-      </thead>
-      <tbody>
-      <%= render @expenses %>
-      </tbody>
-    </table>
+    <% @expenses_by_day.each do |day, expenses| %>
+      <div class="flex justify-between">
+        <h2 class="text-lg mt-2 mb-2 font-medium"><%= day %></h2>
+        <h2 class="text-lg mt-2 mb-2 font-medium"><%= expenses.map(&:amount).sum %> PLN</h2>
+      </div>
+      <table class="min-w-full table-fixed border-collapse border border-slate-200">
+        <thead class="bg-blue-600 text-white rounded-md text-left">
+          <tr class="rounded-md">
+            <th class="min-w[150-px] p-3 font-medium">Name</th>
+            <th class="min-w[150-px] p-3 font-medium">Date</th>
+            <th class="min-w[150-px] p-3 font-medium">Amount</th>
+            <th class="min-w[150-px] p-3 font-medium">Description</th>
+            <th class="min-w[150-px] p-3 font-medium">Edit</th>
+            <th class="min-w[150-px] p-3 font-medium">Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+        <%= render expenses %>
+        </tbody>
+      </table>
+    <% end %>
   </div>
 </div>
