--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="my-5">
+    <%= form.label :category %>
+    <%= form.select(:category_id, Category.all.map{ |category| [category.name, category.id]} , {}, { class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" }) %> 
+  </div>
+
+  <div class="my-5">
     <%= form.label :date %>
     <%= form.date_field :date, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
