--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -12,27 +12,27 @@
   <% end %>
 
   <div class="my-5">
-    <%= form.label :name %>
+    <%= form.label :name, class: "block text-gray-700 font-bold mb-2" %>
     <%= form.text_field :name, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :category %>
+    <%= form.label :category, class: "block text-gray-700 font-bold mb-2" %>
     <%= form.select(:category_id, Category.all.map{ |category| [category.name, category.id]} , {}, { class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" }) %>
   </div>
 
   <div class="my-5">
-    <%= form.label :date %>
+    <%= form.label :date, class: "block text-gray-700 font-bold mb-2" %>
     <%= form.date_field :date, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :amount %>
+    <%= form.label :amount, class: "block text-gray-700 font-bold mb-2" %>
     <%= form.text_field :amount, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :description %>
+    <%= form.label :description, class: "block text-gray-700 font-bold mb-2" %>
     <%= form.text_area :description, rows: 4, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
