Add years logic

--- a/app/views/expenses/_expense.html.erb
+++ b/app/views/expenses/_expense.html.erb
@@ -4,6 +4,6 @@
   <td class="p-3"><%= expense.date %></td>
   <td class="p-3"><%= expense.amount %> PLN</td>
   <td class="p-3"><%= expense.description&.truncate(20) %></td>
-  <td class="p-3"><%= link_to "Edit this expense", edit_expense_path(expense), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %></td>
-  <td class="p-3"><%= link_to "Delete this expense", expense_path(expense), data: { turbo_method: 'delete', turbo_confirm: 'Are you sure?' }, class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %></td>
+  <td class="p-3"><%= link_to "Edit this expense", edit_expense_path(expense), class: "rounded-lg py-3 ml-2 px-5 bg-sky-200 inline-block font-medium" %></td>
+  <td class="p-3"><%= link_to "Delete this expense", expense_path(expense), data: { turbo_method: 'delete', turbo_confirm: 'Are you sure?' }, class: "rounded-lg py-3 ml-2 px-5 bg-red-200 inline-block font-medium" %></td>
 </tr>
