--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -3,30 +3,46 @@
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
-  <div class="flex justify-between space-x-2 mb-4 flex-wrap">
-    <%= link_to expenses_path do %>
-      <button class="rounded-lg py-3 px-5 bg-blue-500 text-white block font-medium hover:bg-blue-400">All</button>
-    <% end %>
-    <% @months.each do |month| %>
-      <%= link_to expenses_path(month: month) do %>
-        <button class="rounded-lg py-3 px-5 bg-blue-500 text-white block font-medium hover:bg-blue-400"><%= month %></button>
+<form id="year-form" action="/expenses" method="get">
+  <select id="year-select" name="year">
+    <% @years.each do |year| %>
+      <% if year == @selected_year %>
+        <option value="<%= year %>" selected><%= year %></option>
+      <% else %>
+        <option value="<%= year %>"><%= year %></option>
       <% end %>
     <% end %>
-  </div>
+  </select>
+</form>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Expenses (<%= @expenses.map(&:amount).sum %> PLN)</h1>
-    <%= link_to "New expense", new_expense_path, class: "rounded-lg py-3 px-5 bg-blue-500 text-white block font-medium hover:bg-blue-400" %>
-  </div>
-  
-  <canvas id="myChart" width="400px" height="100px" data-labels=" <%= params[:month] ? @days_in_month : @months %>" data-data="<%= params[:month] ? @values_per_day : @monthly_sums %>"></canvas>
+<div class="flex justify-between space-x-2 mb-4 flex-wrap">
+  <%= link_to expenses_path(month: nil, year: params[:year] || Date.current.year) do %>
+    <button class="rounded-lg py-3 px-5 bg-blue-500 text-white block font-medium hover:bg-blue-400">All</button>
+  <% end %>
 
-  <div id="expenses" class="min-w-full mt-4">
-    <% @expenses_by_day.each do |day, expenses| %>
-      <div class="flex justify-between">
-        <h2 class="text-lg mt-2 mb-2 font-medium"><%= day %></h2>
-        <h2 class="text-lg mt-2 mb-2 font-medium"><%= expenses.map(&:amount).sum %> PLN</h2>
-      </div>
+  <% @months.each do |month| %>
+    <%= link_to expenses_path(month: month, year: params[:year]) do %>
+      <button class="rounded-lg py-3 px-5 bg-blue-500 text-white block font-medium hover:bg-blue-400"><%= month %></button>
+    <% end %>
+  <% end %>
+</div>
+
+
+<div class="flex justify-between items-center">
+  <h1 class="font-bold text-4xl">Expenses (<%= @expenses.map(&:amount).sum %> PLN)</h1>
+  <%= link_to "New expense", new_expense_path, class: "rounded-lg py-3 px-5 bg-blue-500 text-white block font-medium hover:bg-blue-400" %>
+</div>
+
+<canvas id="myChart" width="400px" height="100px" data-labels="<%= params[:month].present? ? @days_in_month : @months %>" data-data="<%= params[:month].present? ? @values_per_day : @monthly_sums %>"></canvas>
+
+<div id="expenses" class="min-w-full mt-4">
+  <% @expenses_by_year_and_month.each do |year_month, expenses| %>
+    <div class="flex justify-between items-center">
+      <h2 class="text-lg mt-2 mb-2 font-medium"><%= Date::MONTHNAMES[year_month[1]] %> <%= year_month[0] %></h2>
+      <h2 class="text-lg mt-2 mb-2 font-medium"><%= expenses.map(&:amount).sum %> PLN</h2>
+    </div>
+
+    <% expenses.each do |expense| %>
       <table class="min-w-full table-fixed border-collapse border border-slate-200">
         <thead class="bg-blue-500 text-white rounded-md text-left">
           <tr class="rounded-md">
@@ -39,10 +55,24 @@
             <th class="min-w[150-px] p-3 font-medium">Delete</th>
           </tr>
         </thead>
-        <tbody>
-        <%= render expenses %>
+      <tbody>
+        <%= render expense %>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  $(document).ready(function() {
+    $('#year-select').change(function() {
+      var year = $(this).val();
+      var currentUrl = new URL(window.location.href);
+      currentUrl.searchParams.set('year', year);
+      window.location.href = currentUrl.toString();
+    });
+  });
+</script>
+
         </tbody>
       </table>
     <% end %>
-  </div>
+  <% end %>
+</div>
 </div>
