--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-    <body class="bg-indigo-50">
+  <%= debug(params) if Rails.env.development? %>
+
+  <body class="bg-indigo-50">
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
